# tutorials

.ipynb_checkpoints/: README-checkpoint.md
computer_vision/: 01_gray_scale.ipynb  AAA_SYLLABUS.ipynb
computer_vision/.ipynb_checkpoints/: 00_open_save_ and_show_image-checkpoint.ipynb  01_gray_scale-checkpoint.ipynb
computer_vision/cpp/: CMakeLists.txt  test.txt.txt
gui/: csv_2_data_frame.ipynb  file_management_dialogbox.ipynb  main.py  play_rmt.ipynb
gui/.ipynb_checkpoints/: csv_2_data_frame-checkpoint.ipynb  tkinter_file_dialog-checkpoint.py
network from image/: gen_mask.py  image_pipeline.ipynb  my_nefi.py
network from image/.ipynb_checkpoints/: image_pipeline-checkpoint.ipynb
neursights/: reaction_time.ipynb
pytorch/: Untitled.ipynb  awesome_linear_model.pkl  my_awesomeLogisticmodel.pkl  pytorch_01_linear_regression_no_bias.ipynb  pytorch_01_linear_regression_with_bias.ipynb  pytorch_01_linear_regression_with_bias_GPU.ipynb  pytorch_04_convolutional_neural_network.ipynb  pytorch_05_Recurrent_Neural_Network.ipynb  pytorch_gan_mnist.ipynb
pytorch/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  pytorch_01_linear_regression_with_bias-checkpoint.ipynb  pytorch_01_linear_regression_with_bias_GPU-checkpoint.ipynb  pytorch_02_Logistic_Regression-checkpoint.ipynb  pytorch_03_feedforward_neural_network-checkpoint.ipynb
tensor_flow_basics/: README.md  Untitled.ipynb  example_01_MNIST.ipynb  example_02_no_data.ipynb
tensor_flow_basics/.ipynb_checkpoints/: README-checkpoint.md  example_01_MNIST-checkpoint.ipynb
